# schema-porter

./: LICENSE  README.md  example.py  pyproject.toml  something_generated_dataclass.py  something_generated_pydantic.py
porter/: __init__.py
porter/converters/: __init__.py  pydantic_converter.py
porter/converters/templates/: dataclass_template.tmpl  pydantic_template.tmpl
