[tool.poetry]
name = "schema-porter"
version = "0.1.0"
description = "A simple schema conversion tool."
authors = ["Taj <tjgurwara99@gmail.com>"]
license = "MIT"
packages = [ { include = "porter" }, { include = "LICENSE" } ]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"
marshmallow = "^3.17.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
